Update README and add rails 12 factor gem for heroku

--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,17 @@
-== README
+## SETUP
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+1. Make sure you have Ruby version `2.3.0` installed. Then go to the app directory and run `bundle install`
 
-Things you may want to cover:
+2. Install **Postgres** and use relevant login details (username & password) inside `database.yml`
 
-* Ruby version
+3. Run `rake db:setup`
 
-* System dependencies
+4. Start server with `rails s`
 
-* Configuration
+5. To create messages:
+    ```
+    POST /api/messages
+     { "body": "This is a message from #zozi" }
+    ```
 
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+6. To see messages and tags go to `/messages`
